style.css
.profbox {
    color: rgb(34, 34, 35);
    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
    font-weight:500;
}

a:hover {
    background-color: azure;
}

.appgroup {
    width: min-content;
    display: inline-flex;
    flex-direction: column;
    flex-wrap:wrap;
    height: 100vh;
    font-family: "Geist Pixel";
    font-weight: 100;
}

.app {
    flex-grow:0;
    text-align: center;
    margin-right: 8vh;
}

.apptext {
    margin-top: 0px;
    width: 200%;
}

.icon {
    width: 200%;
}

.window {
    position: absolute;
    display: flex;
    flex-direction: column;
    background-color: #dfdfdf;
    border: 1px solid black;
    border-radius: 7px;
    resize: both;
    overflow: hidden;
}

.windowedge {
    display: flex;
    justify-content: right;
    background-color: #000080;
    padding-top: 5px;
    padding-right: 5px;
}

.windowcontent {
    flex: 1;
    min-height: 0;
}

.windowtitle {
    text-align: left;
    font-family: "Geist Pixel";
    color: white;
    margin-right: auto;
    padding-left: 10px;
}

.tabbutton {
    width: 20px;
    height: 20px;
}

body {
    margin: 0px 0px 0px 0px;
    overflow-x: hidden;
    overflow-y: hidden;
}

#aboutwindow {
    top: 90px;
    left: 340px;
    justify-content: center;
    text-align: center;
}

#aboutpage {
    display: flex;
    font-size: 19px;
    justify-content: center;
    align-items: center;
}

#aboutphoto {
    padding: 30px;
}

#abouttext {
    padding: 20px;
    padding-right: 60px;
    width: 370px;
}

#crustyme {
    max-width: 40vh;
}




#musicwindow {
    top: 40px;
    left: 100px;
    font-family: "Geist Pixel";
}

#musicpage {
    display: flex;
    flex: 1;
    min-height: 0;
    justify-content: center;
    align-items: stretch;
}

#tracklist {
    justify-content: center;
    flex: 1;
    overflow-y: auto;
    overflow-x: hidden;
    min-height: 0;
    padding: 30px;
    align-self: stretch;
    background-color: white;
    border-color: gray;
    border-width: 1px;
    border-style: solid;
    border-radius: 4px;
    margin: 20px;
}

#musictext {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    text-align: center;
    padding: 30px;
    width: 300px;
    flex-shrink: 0;
    gap: 20px;
}

#albumcover {
    width: 200px;
    height: 200px;
    text-align: center;
    justify-content: center;
    display: flex;
}

#albumcoverimg {
    width: 100%;
    height: 100%;
    object-fit: cover;
    text-align: center;
    justify-content: center;
    align-items: center;
    border-radius: 20px;
}

.song {
    cursor:pointer;
}

.song:hover {
    font-weight: 800;
}

#infobox {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    border-radius: 20px;
    background-color:rgb(255, 255, 255);
    padding: 30px 30px 10px 30px;
    border-color: gray;
    border-style: solid;
    border-width: 1px;
}

#progressbar {
    -webkit-appearance: none;
    width: 100%;
    height: 2px;
    background: rgb(116, 116, 116);
    cursor:pointer;
}

#progressbar::-webkit-slider-thumb {
    -webkit-appearance: none;
    background: rgb(99, 99, 99);
    width: 7px;
    height: 20px;
}

#play {
    background-color: pink;
}

